electron-dock/mx-insight-hub/deploy/k8s/internal/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mx-insight-hub
  labels:
    app.kubernetes.io/part-of: mx-insight-hub
    mx-common.io/client: allowed
